--- a/index.html
+++ b/index.html
@@ -59,10 +59,14 @@
       text-align: center;
       background-color: #fefdf9;
     }
+    .modal iframe {
+      width: 100%;
+      height: 400px;
+    }
   </style>
 </head>
-
 <body>
+
   <!-- Bienvenida -->
   <div id="bienvenida">
     <div class="container">
@@ -90,51 +94,78 @@
       </nav>
     </div>
   </header>
+<!-- Clases -->
+<section id="clases" class="section container">
+  <h2 class="mb-4">Clases Virtuales Grabadas</h2>
+  <div class="list-group">
+    <a href="#" class="list-group-item list-group-item-action" data-bs-toggle="modal" data-bs-target="#modalClase1">Clase 01 – Introducción</a>
+    <a href="#" class="list-group-item list-group-item-action" data-bs-toggle="modal" data-bs-target="#modalClase2">Clase 02 – Eneagrama</a>
+    <a href="#" class="list-group-item list-group-item-action" data-bs-toggle="modal" data-bs-target="#modalClase3">Clase 03 – Cuerpo y Emoción</a>
+    <a href="#" class="list-group-item list-group-item-action" data-bs-toggle="modal" data-bs-target="#modalClase4">Clase 04 – Estados Ampliados</a>
+    <a href="#" class="list-group-item list-group-item-action" data-bs-toggle="modal" data-bs-target="#modalClase5">Clase 05 – La Presencia</a>
+    <a href="#" class="list-group-item list-group-item-action" data-bs-toggle="modal" data-bs-target="#modalClase6">Clase 06 – Vínculos</a>
+    <a href="#" class="list-group-item list-group-item-action" data-bs-toggle="modal" data-bs-target="#modalClase7">Clase 07 – Mente y Pensamiento</a>
+    <a href="#" class="list-group-item list-group-item-action" data-bs-toggle="modal" data-bs-target="#modalClase8">Clase 08 – Subpersonalidades</a>
+    <a href="#" class="list-group-item list-group-item-action" data-bs-toggle="modal" data-bs-target="#modalClase9">Clase 09 – Trauma y Reparación</a>
+    <a href="#" class="list-group-item list-group-item-action" data-bs-toggle="modal" data-bs-target="#modalClase10">Clase 10 – Cierre del Ciclo</a>
+  </div>
+</section>
 
-  <!-- Clases -->
-  <section id="clases" class="section container">
-    <h2 class="mb-4">Clases Virtuales Grabadas</h2>
-    <div class="ratio ratio-16x9">
-      <iframe src="https://drive.google.com/file/d/16uCgvo3-DarOiJ7JjIXrjLU_QzXHr57M/preview" allow="autoplay" allowfullscreen></iframe>
+<!-- Modales para clases -->
+${[...Array(10)].map((_, i) => `
+<div class="modal fade" id="modalClase${i+1}" tabindex="-1" aria-labelledby="modalLabel${i+1}" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalLabel${i+1}">Clase 0${i+1}</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <iframe src="https://drive.google.com/file/d/16uCgvo3-DarOiJ7JjIXrjLU_QzXHr57M/preview" allow="autoplay" allowfullscreen></iframe>
+      </div>
     </div>
-    <p class="mt-3">Clase 01 – Introducción al Enfoque Transpersonal</p>
-  </section>
+  </div>
+</div>`).join('')}
+<!-- Fin modales -->
 
-  <!-- Libros -->
-  <section id="libros" class="section container">
-    <h2 class="mb-4">Libros y Artículos en PDF</h2>
-    <div class="mb-3">
-      <h5>PDF: Infancia, Edad Sagrada</h5>
-      <a href="https://drive.google.com/file/d/1pl-54gCc31_V8NRKh7z6KdauilOBmjse/view?usp=sharing" target="_blank" class="btn btn-arka">Ver o Descargar</a>
-    </div>
-  </section>
+<!-- Libros -->
+<section id="libros" class="section container">
+  <h2 class="mb-4">Libros y Artículos en PDF</h2>
+  <ul class="list-group">
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+      Material 01 – Inteligencia Planetaria
+      <a href="https://drive.google.com/file/d/1pl-54gCc31_V8NRKh7z6KdauilOBmjse/view?usp=sharing" target="_blank" class="btn btn-sm btn-arka">Ver o Descargar</a>
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+      Material 02 – Psicología Transpersonal
+      <a href="#" class="btn btn-sm btn-arka">Ver o Descargar</a>
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+      Material 03 – Enfoque Gestáltico
+      <a href="#" class="btn btn-sm btn-arka">Ver o Descargar</a>
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+      Material 04 – Estados de Conciencia
+      <a href="#" class="btn btn-sm btn-arka">Ver o Descargar</a>
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+      Material 05 – Cuerpo y Memoria
+      <a href="#" class="btn btn-sm btn-arka">Ver o Descargar</a>
+    </li>
+  </ul>
+</section>
 
-  <!-- Audios -->
-  <section id="audios" class="section container">
-    <h2 class="mb-4">Audios de Meditación</h2>
-    <div class="mb-3">
-      <h5>Meditación 01 – Respiración y presencia</h5>
+<!-- Audios -->
+<section id="audios" class="section container">
+  <h2 class="mb-4">Audios de Meditación</h2>
+  <div class="row">
+    ${[...Array(10)].map((_, i) => `
+    <div class="col-md-6 mb-4">
+      <h6>Meditación 0${i+1} – Práctica ${i+1}</h6>
       <audio controls>
         <source src="https://docs.google.com/uc?export=download&id=1UXZVXTE1NQNie7PmMnhQiBmDk9r66jtb" type="audio/mp3" />
         Tu navegador no soporta audio embebido.
       </audio>
-    </div>
-  </section>
-
-  <!-- Scripts -->
-  <script>
-    function iniciarCampus() {
-      document.getElementById('bienvenida').style.display = 'none';
-      document.getElementById('navHeader').style.display = 'block';
-      mostrarSeccion('clases');
-    }
-
-    function mostrarSeccion(id) {
-      document.querySelectorAll('.section').forEach(seccion => {
-        seccion.classList.remove('active-section');
-      });
-      document.getElementById(id).classList.add('active-section');
-    }
-  </script>
-</body>
-</html>
+    </div>`).join('')}
+  </div>
+</section>
