--- a/index.html
+++ b/index.html
@@ -144,29 +144,61 @@
     </div>
   </div>
 
-  <!-- Libros -->
-  <section id="libros" class="section container">
-    <h2 class="mb-4">Libros y Artículos en PDF</h2>
-    <div class="mb-3">
-      <h5>PDF: Inteligencia Planetaria</h5>
-      <a href="https://drive.google.com/file/d/1pl-54gCc31_V8NRKh7z6KdauilOBmjse/view?usp=sharing" target="_blank" class="btn btn-arka">Ver o Descargar</a>
-   
-    
-    
-    </div>
-  </section>
+<!-- Libros -->
+<section id="libros" class="section container">
+  <h2 class="mb-4">Libros y Artículos en PDF</h2>
 
-  <!-- Audios -->
-  <section id="audios" class="section container">
-    <h2 class="mb-4">Audios de Meditación</h2>
-    <div class="mb-3">
-      <h5>Meditación 01 – Respiración y presencia</h5>
-      <audio controls>
+  <div class="list-group">
+
+    <!-- Libro 1 -->
+    <a href="https://drive.google.com/file/d/1pl-54gCc31_V8NRKh7z6KdauilOBmjse/view?usp=sharing" 
+       target="_blank" 
+       class="list-group-item list-group-item-action">
+      <strong>Inteligencia Planetaria</strong><br>
+      <small>📄 Eugenio Carutti – PDF (Descarga/Visualización)</small>
+    </a>
+
+    <!-- Más libros (ejemplo) -->
+    <!--
+    <a href="LINK_DEL_PDF" target="_blank" class="list-group-item list-group-item-action">
+      <strong>Título del Libro</strong><br>
+      <small>📄 Autor/a – PDF</small>
+    </a>
+    -->
+
+  </div>
+</section>
+
+<!-- Audios -->
+<section id="audios" class="section container">
+  <h2 class="mb-4">Audios de Meditación</h2>
+
+  <div class="list-group">
+
+    <!-- Audio 1 -->
+    <div class="list-group-item">
+      <strong>Meditación 01 – Respiración y presencia</strong><br>
+      <small>🎧 Voz: German Doin</small>
+      <audio controls class="mt-2 w-100">
         <source src="https://docs.google.com/uc?export=download&id=1UXZVXTE1NQNie7PmMnhQiBmDk9r66jtb" type="audio/mp3" />
         Tu navegador no soporta audio embebido.
       </audio>
     </div>
-  </section>
+
+    <!-- Más audios (ejemplo) -->
+    <!--
+    <div class="list-group-item">
+      <strong>Meditación 02 – Nombre</strong><br>
+      <small>🎧 Voz: Facilitador/a</small>
+      <audio controls class="mt-2 w-100">
+        <source src="LINK_DEL_AUDIO" type="audio/mp3" />
+        Tu navegador no soporta audio embebido.
+      </audio>
+    </div>
+    -->
+
+  </div>
+</section>
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
