--- a/index.html
+++ b/index.html
@@ -96,7 +96,16 @@
     <h2 class="mb-4">Clases Virtuales Grabadas</h2>
 
     <div class="list-group">
-
+      
+      <!-- Clase 1 -->
+      <button type="button" class="list-group-item list-group-item-action" 
+              data-bs-toggle="modal" 
+              data-bs-target="#videoModal" 
+              data-video="https://drive.google.com/file/d/1dSEeP0fL7gMkBA6jhNFhu8ML1s4umH7D/preview">
+        <strong>Clase 01:</strong> Orígenes de la Psicología Transpersonal<br>
+        <small>📅 15 de Mayo 2025 – 🎓 Nicolas Velazquez</small>
+      </button>
+      <br />
       <!-- Clase 2 -->
       <button type="button" class="list-group-item list-group-item-action" 
               data-bs-toggle="modal" 
