--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
   <div class="list-group">
 
     <!-- Libro 1 -->
-    <a href="https://drive.google.com/file/d/1pl-54gCc31_V8NRKh7z6KdauilOBmjse/view?usp=sharing" 
+    <a href="https://drive.google.com/file/d/1pl-54gCc31_V8NRKh7z6KdauilOBmjse/view?usp=drive_link" 
        target="_blank" 
        class="list-group-item list-group-item-action">
-      <strong>Inteligencia Planetaria</strong><br>
-      <small>📄 Eugenio Carutti – PDF (Descarga/Visualización)</small>
+      <strong>Infancia, la edad sagrada</strong><br>
+      <small>📄 Evania Reichert – PDF (Descarga/Visualización)</small>
     </a>
 
     <!-- Más libros (ejemplo) -->
@@ -186,14 +186,22 @@
 
     <!-- Audio 1 -->
     <div class="list-group-item">
-      <strong>Meditación 01 – Respiración y presencia</strong><br>
-      <small>🎧 Voz: German Doin</small>
+      <strong>Conciencia corporal 01</strong><br>
+      <small>🎧 Voz: María Paulina Rubio</small>
       <audio controls class="mt-2 w-100">
-        <source src="https://docs.google.com/uc?export=download&id=1UXZVXTE1NQNie7PmMnhQiBmDk9r66jtb" type="audio/mp3" />
+        <source src="https://drive.google.com/file/d/1UXZVXTE1NQNie7PmMnhQiBmDk9r66jtb/view?usp=drive_link" type="audio/mp3" />
         Tu navegador no soporta audio embebido.
       </audio>
     </div>
 
+   <div class="list-group-item">
+      <strong>Atención plena 01</strong><br>
+      <small>🎧 Voz: María Paulina Rubio</small>
+      <audio controls class="mt-2 w-100">
+        <source src="https://drive.google.com/file/d/1rw210a96DC8nlgHMteIK6048YQkOjvld/view?usp=drive_link" type="audio/mp3" />
+        Tu navegador no soporta audio embebido.
+      </audio>
+    </div>
     <!-- Más audios (ejemplo) -->
     <!--
     <div class="list-group-item">
