--- a/index.html
+++ b/index.html
@@ -192,16 +192,16 @@
       <strong>Conciencia corporal 01</strong><br>
       <small>🎧 Voz: María Paulina Rubio</small>
       <audio controls class="mt-2 w-100">
-        <source src="https://drive.google.com/file/d/1UXZVXTE1NQNie7PmMnhQiBmDk9r66jtb/view?usp=drive_link" type="audio/mp3" />
+        <source src="https://drive.google.com/file/d/1UXZVXTE1NQNie7PmMnhQiBmDk9r66jtb/preview" type="audio/mp3" />
         Tu navegador no soporta audio embebido.
       </audio>
     </div>
-
+<br />
    <div class="list-group-item">
       <strong>Atención plena 01</strong><br>
       <small>🎧 Voz: María Paulina Rubio</small>
       <audio controls class="mt-2 w-100">
-        <source src="https://drive.google.com/file/d/1rw210a96DC8nlgHMteIK6048YQkOjvld/view?usp=drive_link" type="audio/mp3" />
+        <source src="https://drive.google.com/file/d/1rw210a96DC8nlgHMteIK6048YQkOjvld/view" type="audio/mp3" />
         Tu navegador no soporta audio embebido.
       </audio>
     </div>
