--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <strong>Conciencia corporal 01</strong><br>
       <small>🎧 Voz: María Paulina Rubio</small>
       <audio controls class="mt-2 w-100">
-        <source src="https://drive.google.com/file/d/1UXZVXTE1NQNie7PmMnhQiBmDk9r66jtb/preview" type="audio/mp3" />
+        <source src="https://docs.google.com/uc?export=download&id=1UXZVXTE1NQNie7PmMnhQiBmDk9r66jtb" type="audio/mp3" />
         Tu navegador no soporta audio embebido.
       </audio>
     </div>
@@ -201,7 +201,7 @@
       <strong>Atención plena 01</strong><br>
       <small>🎧 Voz: María Paulina Rubio</small>
       <audio controls class="mt-2 w-100">
-        <source src="https://drive.google.com/file/d/1rw210a96DC8nlgHMteIK6048YQkOjvld/view" type="audio/mp3" />
+        <source src="https://docs.google.com/uc?export=download&id=1rw210a96DC8nlgHMteIK6048YQkOjvld" type="audio/mp3" />
         Tu navegador no soporta audio embebido.
       </audio>
     </div>
@@ -211,7 +211,7 @@
       <strong>Meditación 02 – Nombre</strong><br>
       <small>🎧 Voz: Facilitador/a</small>
       <audio controls class="mt-2 w-100">
-        <source src="LINK_DEL_AUDIO" type="audio/mp3" />
+        <source src="https://docs.google.com/uc?export=download&id=" type="audio/mp3" />
         Tu navegador no soporta audio embebido.
       </audio>
     </div>
