--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <strong>Conciencia corporal 01</strong><br>
       <small>🎧 Voz: María Paulina Rubio</small>
       <audio controls class="mt-2 w-100">
-        <source src="https://docs.google.com/uc?export=download&id=1UXZVXTE1NQNie7PmMnhQiBmDk9r66jtb" type="audio/mp3" />
+        <source src="audios/conciencia-01.mp3" type="audio/mp3" />
         Tu navegador no soporta audio embebido.
       </audio>
     </div>
@@ -201,7 +201,7 @@
       <strong>Atención plena 01</strong><br>
       <small>🎧 Voz: María Paulina Rubio</small>
       <audio controls class="mt-2 w-100">
-        <source src="https://docs.google.com/uc?export=download&id=1rw210a96DC8nlgHMteIK6048YQkOjvld" type="audio/mp3" />
+        <source src="audios/atencion-01.mp3" type="audio/mp3" />
         Tu navegador no soporta audio embebido.
       </audio>
     </div>
