--- a/index.html
+++ b/index.html
@@ -161,15 +161,31 @@
   <h2 class="mb-4">Libros y Artículos en PDF</h2>
 
   <div class="list-group">
-
     <!-- Libro 1 -->
+    <a href="https://drive.google.com/file/d/1B5Rurz2ZkHBGqQbOSb7QJZ5cHeqfUwju/view?usp=drive_link" 
+       target="_blank" 
+       class="list-group-item list-group-item-action">
+      <strong>El Enfoque Gestaltico - Testimonios de Terapia</strong><br>
+      <small>📄 Fritz Perls - PDF (Descarga/Visualización)</small>
+    </a><br />
+        <!-- Libro 2 -->
+    <a href="https://drive.google.com/file/d/1XpYfxX4FgaZp1q-LVRjqo6s0SyVHiyNk/view?usp=drive_link" 
+       target="_blank" 
+       class="list-group-item list-group-item-action">
+      <strong>Esquizitofrenia</strong><br>
+      <small>📄 Luis Enrrique Mejia – PDF (Descarga/Visualización)</small>
+    </a><br />
+    <!-- Libro 3 -->
     <a href="https://drive.google.com/file/d/1pl-54gCc31_V8NRKh7z6KdauilOBmjse/view?usp=drive_link" 
        target="_blank" 
        class="list-group-item list-group-item-action">
       <strong>Infancia, la edad sagrada</strong><br>
       <small>📄 Evania Reichert – PDF (Descarga/Visualización)</small>
-    </a>
+    </a><br />
 
+
+
+    
     <!-- Más libros (ejemplo) -->
     <!--
     <a href="LINK_DEL_PDF" target="_blank" class="list-group-item list-group-item-action">
